syntax = "proto3";

option csharp_namespace = "AccountServer.Grpc";
package account;

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply);
  rpc GetAccount (GetAccountRequest) returns (ReturnAccountReply);
}

message CreateAccountRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string birthday = 4;
}

message CreateAccountReply {
  bool success = 1;
  string message = 2;
}

message GetAccountRequest {
	string username = 1;
	string password = 3;
}

message ReturnAccountReply {
	string message = 1;
	bool correctAccountCredentials = 2;
	int64 messageType = 3;
}
